# EU-economy-bot-discord.py-rewrite

./: config.py  main.py  methods.py  pyproject.toml  readme.md  scraper.py
commands/: alter_money.py  balance.py  basic.py  config.py  market.py  send.py  smart_contract.py  stats.py  wallet_settings.py  work.py
database_utils/: create.py  log_money.py  wallet_converter.py
discord_utils/: embeds.py
events/: error.py  message.py  ready.py
