[tool.poetry]
name = "eu-economy-bot-discordpy-rewrite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
utils = "^1.0.1"
config = "^0.5.0"
consultor = "^0.2.0"
flask = "^1.1.2"
pymongo = "^3.11.0"
discord = "^1.0.1"
replit = "^2.0.0"
wikipedia = "^1.4.0"
textblob = "^0.15.3"
webbot = "^0.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
